components/notification/notification.scss
@use '../reset';

$sizes: compact, comfortable, spacious, dense;
$variants: error, success, warning, light, dark, surface, info;
$appearances: filled, outlined;

.ids-notification {
  @include reset.component;

  & > .ids-notification__content-wrapper {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    align-content: flex-start;
    flex-wrap: wrap;
    border-style: solid;

    & > .ids-notification__leading-element {
      display: flex;
      align-items: center;
      flex-shrink: 0;
    }

    & > .ids-notification__container {
      display: flex;
      justify-content: space-between;
      align-content: center;
      flex: 1 0 0;

      & > .ids-notification__title-msg-container {
        display: flex;
        flex-direction: column;

        & > .ids-notification__title {
          font-style: normal;
        }

        & > .ids-notification__message {
          flex: 1 0 0;
          font-style: normal;
        }
      }

      & > .ids-notification__action {
        display: flex;
        align-items: center;
        flex-shrink: 0;
      }
    }

    & > .ids-notification__close-button-container.ids-notification__label-button {
      display: flex;
      align-self: center;
    }
  }

  &.ids-notification-actions-bottom-mode > .ids-notification__content-wrapper > .ids-notification__container {
    flex-direction: column;
    align-items: flex-start;
  }

  &:not(.ids-notification-actions-bottom-mode) > .ids-notification__content-wrapper > .ids-notification__container {
    align-items: center;
  }

  @each $appearance in $appearances {
    @each $variant in $variants {
      &.ids-notification-#{$appearance}.ids-notification-#{$variant} {
        & > .ids-notification__content-wrapper {
          border-color: var(--ids-comp-notification-#{$appearance}-color-border-#{$variant}-default);
          background: var(--ids-comp-notification-#{$appearance}-color-bg-#{$variant}-default);

          & > .ids-notification__leading-element {
            & > .ids-icon {
              color: var(--ids-comp-notification-#{$appearance}-color-fg-icon-#{$variant}-default);
            }
          }

          & > .ids-notification__container {
            & > .ids-notification__title-msg-container {
              & > .ids-notification__title {
                color: var(--ids-comp-notification-#{$appearance}-color-fg-title-#{$variant}-default);
              }
              & > .ids-notification__message {
                color: var(--ids-comp-notification-#{$appearance}-color-fg-message-#{$variant}-default);
              }
            }
          }
        }
      }
    }

    @each $size in $sizes {
      &.ids-notification-#{$appearance}.ids-notification-#{$size} {
        & > .ids-notification__content-wrapper {
          gap: var(--ids-comp-notification-#{$appearance}-container-size-gap-#{$size});
          padding: var(--ids-comp-notification-#{$appearance}-container-size-padding-y-#{$size})
            var(--ids-comp-notification-#{$appearance}-container-size-padding-x-#{$size});
          border-radius: var(--ids-comp-notification-#{$appearance}-container-size-border-radius-#{$size});
          border-top-width: var(--ids-comp-notification-#{$appearance}-container-size-border-top-width-#{$size});
          border-right-width: var(--ids-comp-notification-#{$appearance}-container-size-border-right-width-#{$size});
          border-bottom-width: var(--ids-comp-notification-#{$appearance}-container-size-border-bottom-width-#{$size});
          border-left-width: var(--ids-comp-notification-#{$appearance}-container-size-border-left-width-#{$size});

          & > .ids-notification__container {
            min-width: var(--ids-comp-notification-#{$appearance}-container-size-min-width-#{$size});
            max-width: var(--ids-comp-notification-#{$appearance}-container-size-max-width-#{$size});
          }
        }
      }
    }
  }

  @each $size in $sizes {
    &.ids-notification-#{$size} {
      & > .ids-notification__content-wrapper {
        & > .ids-notification__leading-element {
          padding-left: var(--ids-comp-notification-icon-size-padding-left-#{$size});
          padding-right: var(--ids-comp-notification-icon-size-padding-right-#{$size});

          & > .ids-icon {
            width: var(--ids-comp-notification-icon-size-icon-#{$size});
            height: var(--ids-comp-notification-icon-size-icon-#{$size});
            font-size: var(--ids-comp-notification-icon-typography-font-size-#{$size});
            font-weight: var(--ids-comp-notification-icon-typography-font-weight-#{$size});
            line-height: var(--ids-comp-notification-icon-typography-line-height-#{$size});
          }
        }

        & > .ids-notification__container {
          padding-right: var(--ids-comp-notification-message-size-padding-right-#{$size});
          gap: var(--ids-comp-notification-message-size-gap-#{$size});

          & > .ids-notification__title-msg-container {
            row-gap: var(--ids-comp-notification-message-size-gap-#{$size});

            & > .ids-notification__title {
              font-size: var(--ids-comp-notification-title-typography-font-size-#{$size});
              font-weight: var(--ids-comp-notification-title-typography-font-weight-#{$size});
              line-height: var(--ids-comp-notification-title-typography-line-height-#{$size});
              letter-spacing: var(--ids-comp-notification-title-typography-letter-spacing-#{$size});
            }

            & > .ids-notification__message {
              font-size: var(--ids-comp-notification-message-typography-font-size-#{$size});
              font-weight: var(--ids-comp-notification-message-typography-font-weight-#{$size});
              line-height: var(--ids-comp-notification-message-typography-line-height-#{$size});
              letter-spacing: var(--ids-comp-notification-message-typography-letter-spacing-#{$size});
            }
          }

          & > .ids-notification__action {
            gap: var(--ids-comp-notification-actions-size-gap-#{$size});
          }
        }

        & > .ids-notification__close-button-container > .ids-icon-button > .ids-icon {
          width: var(--ids-comp-notification-icon-button-size-icon-button-#{$size});
          height: var(--ids-comp-notification-icon-button-size-icon-button-#{$size});
        }
      }
    }
  }
}

